# modulo-deploy-ia

./: .gitignore  pyproject.toml
01_deploy/: exemplo1.py  exemplo2.py  exemplo3.py  exemplo4.py
aula3/: exemplo1.py  exemplo2.py
tmp/: agent.db
tmp/chromadb/: chroma.sqlite3
